--- a/animation.html
+++ b/animation.html
@@ -22,12 +22,12 @@
             font-size: 50px;
         }
         .line{
-            border: 1px solid lightgray;
             background-color: white;
             width: 50%;
             height: 2px;
             animation-name: line-extend;
             animation-duration: 5s;
+            animation-iteration-count: infinite;
         }
         @keyframes line-extend {
             0%{border: none; background-color: violet; width: 5%;}
